kafka/schema-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  labels:
    app: schema-registry-schema-registry
    app.kubernetes.io/name: schema-registry
    app.kubernetes.io/instance: schema-registry
    app.kubernetes.io/version: "7.3.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry-schema-registry
      app.kubernetes.io/name: schema-registry
      app.kubernetes.io/instance: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry-schema-registry
        app.kubernetes.io/name: schema-registry
        app.kubernetes.io/instance: schema-registry
    spec:
      # enableServiceLings=false. Automatic ingestion of service environment variables is not desired
      # schema-registry service injects SCHEMA_REGISTRY_PORT variable which makes the schema registry fail to start
      # See https://github.com/confluentinc/schema-registry/issues/689#issuecomment-824769666
      enableServiceLinks: false
      serviceAccountName: schema-registry-sa
      securityContext:
        fsGroup: 1000
      containers:
        - name: schema-registry
          imagePullPolicy: IfNotPresent
          image: "docker.io/confluentinc/cp-schema-registry:7.9.0"
          ports:
          - name: http
            containerPort: 8081
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
          - name: tmp
            mountPath: /tmp
          - name: config
            mountPath: /etc/schema-registry
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
          # resources:
          #   limits:
          #     cpu: 200m
          #     memory: 1400Mi
          #   requests:
          #     cpu: 100m
          #     memory: 512Mi
      volumes:
      - name: tmp
        emptyDir: {}
      - name: config
        emptyDir: {}
