kafka/schema-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  labels:
    app: schema-registry-schema-registry
    app.kubernetes.io/name: schema-registry
    app.kubernetes.io/instance: schema-registry
    app.kubernetes.io/version: "7.9.0"
spec:
  type: ClusterIP
  # clusterIP: None
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: http
  selector:
    app: schema-registry-schema-registry
    app.kubernetes.io/name: schema-registry
    app.kubernetes.io/instance: schema-registry
